# collision-detection-library

./: .clang-format  CMakeLists.txt
include/: collision_library.cpp  collision_library.h
sources/: collision_library.cpp
unittests/: hello_world.cc
